[tool.poetry]
name = "invoice_merger"
version = "0.1.0"
description = ""
authors = ["Angelo Tartanian <angelo.tartanian@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pyinstaller = "^4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
